--- a/styles.css
+++ b/styles.css
@@ -96,12 +96,14 @@ input:focus {
 
 
 .info-container {
+    position: relative;
     margin-top: 45px;
     width: 100%;
     max-width: 400px;
     min-width: 30%;
     background-color: #fff;
     padding: 20px;
+    right: 3%;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 3px -2px, rgba(0, 0, 0, 0.14) 0px 3px 4px 0px, rgba(0, 0, 0, 0.12) 0px 1px 8px 0px;
     border-radius: 8px;
 }
@@ -173,7 +175,7 @@ input:focus {
     height: 1.8rem;
     position: relative;
     background-color: rgb(34 179 65);
-    width: 33%;
+    width: 30%;
     padding: 9px;
     border: none;
     color: white;
@@ -190,7 +192,7 @@ input:focus {
 }
 
 .HideInfo {
-    right: 1.5%;
+    right: 2.5%;
     top: 0.5rem;
     height: 1.8rem;
     position: relative;
@@ -209,7 +211,7 @@ input:focus {
 }
 
 .logout {
-    right: 2.5%;
+    right: 3.5%;
     top: 0.5rem;
     height: 1.8rem;
     position: relative;
@@ -258,7 +260,7 @@ input:focus {
 }
 
 #message-info {
-    padding-top: 2%;
+    padding-top: 1%;
     color: rgb(255, 255, 255);
 }
 
@@ -303,30 +305,34 @@ input:focus {
 @media (max-width: 600px) {
     .login-container {
         padding: 15px;
-        width: 85%; 
+        width: 80%; 
+        right: 1.1%;
+    }
+    .info-container {
+        padding: 15px;
+        width: 80%;
+        margin-top: 0px;
+    }
+    #notify-checked {
+        width: 71%;
+        max-width: 72%;
+        right: 11%;
     }
 }
 
-@media (max-width: 600px) {
-    .info-container {
-        padding: 15px;
-        width: 85%;
-        margin-top: 0px;
-    }
-}
 
 @media only screen and (max-width: 600px) {
     .checkRend {
-        width: 39%;
+        width: 28%;
         right: -1%;
     }
     .HideInfo {
-        right: 0%;
-        width: 28%;
+        right: 3%;
+        width: 30%;
     }
 
     .logout {
-        right: 1%;
+        right: 7%;
         width: 29%;
     }
 }
