--- a/styles.css
+++ b/styles.css
@@ -166,6 +166,15 @@ input:focus {
     background-color: #f9f9f9;
 }
 
+
+ audio
+{
+    width: 102%;
+    left: 1%;
+    top: 0.5rem;
+    height: 2rem;
+    position: relative;
+}
 .info-container {
     display: none;
 }
@@ -311,17 +320,21 @@ input:focus {
     }
     .info-container {
         padding: 15px;
-        width: 80%;
-        right: 1.5%;
+        right: 2.5%;
+        width: 85%;
+        /* height: 33rem; */
     }
     #notify-checked {
         width: 71%;
         max-width: 72%;
         right: 11%;
     }
+    .switch {
+        top: 0.5rem;
+    }
 }
 
-@media (max-width: 1100px) and  (max-height: 1400px) {
+@media (min-width: 800px) and  (min-height: 1024px) and (max-width: 1100px) and  (max-height: 1400px) {
     .login-container {
         padding: 15px;
         right: 1.1%;
