--- a/styles.css
+++ b/styles.css
@@ -1,474 +1,1 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    direction: rtl;
-    overflow: hidden;
-}
-
-.page-border {
-    background-color: #519985;
-    width: 100%;
-    position: absolute;
-    padding: 10px;
-    height: 5%;
-    top: 0%;
-}
-
-.login-container {
-    background-color: rgba(255, 255, 255, 0.933);
-    padding: 20px;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 3px -2px, rgba(0, 0, 0, 0.14) 0px 3px 4px 0px, rgba(0, 0, 0, 0.12) 0px 1px 8px 0px;
-    border-radius: 8px;
-    width: 100%;
-    max-width: 400px; 
-    position: relative;
-    top: 0rem;
-    text-align: center;
-}
-
-.login-border {
-    color: white;
-    height: 2.8rem;
-    position: relative;
-    right: 1%;
-    top: -1.35rem;
-    border-radius: 8px;
-    background-color: #48907CEE;
-}
-
-.loginFormCont {
-    position: relative;
-    margin-top: 4%;
-    width: 100%;
-    height: fit-content;
-    top: 0rem;
-}
-
-h2 {
-    margin-bottom: 20px;
-    position: relative;
-    top: 0.5rem;
-}
-
-.input-group {
-    margin-bottom: 15px;
-}
-
-label {
-    display: block;
-    margin-bottom: 5px;
-    text-align: right;
-    font-size: 17px;
-}
-
-input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    box-sizing: border-box;
-    transition: border-color 0.3s; 
-}
-
-input:focus {
-    outline: 1.8px solid #3a7564ee;  
-   }
-
-.envoyebtn {
-    width: 45%;
-    padding: 9px;
-    background-color: #3a7564ee;
-    border: none;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-    font-weight: bold;
-}
-
-.envoyebtn:hover {
-    background-color: #4c9782ee;
-}
-
-
-
-.info-container {
-    position: relative;
-    margin-top: 45px;
-    width: 100%;
-    max-width: 400px;
-    min-width: 30%;
-    background-color: #fff;
-    padding: 20px;
-    right: 3%;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 3px -2px, rgba(0, 0, 0, 0.14) 0px 3px 4px 0px, rgba(0, 0, 0, 0.12) 0px 1px 8px 0px;
-    border-radius: 8px;
-}
-
-.info-border {
-    color: white;
-    height: 2.8rem;
-    text-align: center;
-    position: relative;
-    top: -1.35rem;
-    border-radius: 8px;
-    background-color: #48907CEE;
-}
-
-
-
-.info-table {
-    width: 100%;
-    border-radius: 4px;
-    border-collapse: collapse;
-    overflow: hidden;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 1px -1px, rgba(0, 0, 0, 0.14) 0px 1px 1px 0px, rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
-}
-
-.info-table-border {
-    border-radius: 4px;
-    border: 1px solid #3a7564ee;
-}
-
-.info-table-body tr {
-    border-bottom: 1px solid #ddd;
-}
-
-.info-table-body tr:last-child {
-    border-bottom: none;
-}
-
-.info-table td {
-    padding: 10px;
-    text-align: left;
-}
-
-.info-table td:first-child {
-    text-align: justify;
-    width: 46%;
-    color: #519985;
-    background-color: #dbdbdb;
-}
-
-.info-table td:last-child {
-    font-weight: bold;
-    color: #2d2c2cc7;
-    background-color: #fff;
-    text-align: justify;
-}
-
-
-.info-table tr:hover td:last-child {
-    background-color: #f9f9f9;
-}
-
-
- audio
-{
-    width: 102%;
-    left: 1%;
-    top: 0.5rem;
-    height: 2rem;
-    position: relative;
-}
-.info-container {
-    display: none;
-}
-
-.checkRend {
-    right: 0.5%;
-    top: 0.5rem;
-    height: 1.8rem;
-    position: relative;
-    background-color: rgb(34 179 65);
-    width: 30%;
-    padding: 9px;
-    border: none;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-    font-weight: bold;
-}
-
-.checkRend:hover {
-    background-color: rgb(26, 141, 51); 
-}
-.checkRend:hover::after {
-    background-color: rgb(165, 33, 33);
-}
-
-.HideInfo {
-    right: 2.5%;
-    top: 0.5rem;
-    height: 1.8rem;
-    position: relative;
-    background-color: #0c38b5de;
-    width: 32%;
-    padding: 9px;
-    border: none;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-    font-weight: bold;
-}
-
-.HideInfo:hover {
-    background-color: #0f46ddde; 
-}
-
-.logout {
-    right: 3.5%;
-    top: 0.5rem;
-    height: 1.8rem;
-    position: relative;
-    background-color: rgb(205 42 42);
-    width: 30%;
-    padding: 9px;
-    border: none;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-    font-weight: bold;
-}
-
-.logout:hover {
-    background-color: rgb(238, 49, 49); 
-}
-
-#notify-login {
-    display: none;
-    height: fit-content;
-    min-height: 2rem;
-    border-radius: 6px;
-    background-color: #e74545;
-    text-align: center;
-    margin-bottom: 5%;
- 
-}
-
-#message-login {
-    font-weight: bold;
-    padding-top: 2%;
-    color: rgb(255, 255, 255);
-}
-
-#notify-info {
-    display: none;
-    position: relative;
-    width: 85%;
-    right: 8%;
-    top: -0.2rem;
-    min-height: 2rem;
-    border-radius: 6px;
-    background-color: #e71919;
-    text-align: center;
- 
-}
-
-#message-info {
-    padding-top: 1%;
-    color: rgb(255, 255, 255);
-}
-
-#notify-info-info {
-    display: none;
-    position: relative;
-    width: 85%;
-    right: 8%;
-    top: -0.6rem;
-    border-radius: 4px;
-    background-color: #0c38b5de;
-    text-align: center;
-}
- 
-
-#message-info-info {
-    padding-top: 2%;
-    color: rgb(255, 255, 255);
-}
-
-#notify-checked {
-    display: none;
-    position: relative;
-    width: fit-content;
-    min-width: 57%;
-    max-width: 58%;
-    right: 21%;
-    top: -0.5rem;
-    padding: 1%;
-    border-radius: 6px;
-    background-color: #57a791;
-    text-align: center;
- 
-}
-
-#message-checked {
-    color: rgb(255 255 255);
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-}
-
-@media (max-width: 600px) {
-    .login-container {
-        padding: 15px;
-        width: 80%; 
-        right: 1.1%;
-    }
-    .info-container {
-        padding: 15px;
-        right: 2.5%;
-        width: 87%;
-        /* height: 33rem; */
-    }
-   
-    #notify-checked {
-        width: 71%;
-        max-width: 72%;
-        right: 11%;
-    }
-    .switch {
-        top: 0.9rem;
-    }
-}
-
-
-@media (min-width: 800px) and  (min-height: 1024px) and (max-width: 1100px) and  (max-height: 1400px) {
-    .login-container {
-        padding: 15px;
-        right: 1.1%;
-    }
-    .info-container {
-        padding: 15px;
-        right: 0.978%;
-    }
-    .switch {
-        top: 0.8rem;
-    }
-
-}
-
-
-@media only screen and (max-width: 600px) {
-    .checkRend {
-        width: 28%;
-        right: -1%;
-        padding: 0%;
-    }
-    .HideInfo {
-        right: 1%;
-        width: 33%;
-        padding: 0%;
-    }
-
-    .logout {
-        right: 2%;
-        width: 31%;
-        padding: 0%;
-    }
-}
-
-
-.container-dark {
-    background-color: #292929;
-    border: 1.5px solid #48907CEE;
-}
-
-body.dark-mode {
-    background-color: #121212;
-    color: white;
-}
-
-
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 3.5rem;
-    height: 1.6rem;
-    right: 7%;
-}
-
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    bottom: 0;
-    background-color: #edeaea;
-    transition: 0.4s;
-    border-radius: 24px;
-}
-
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 100%;
-    width: 47%;
-    right: 51%;
-    bottom: 1%;
-    background-color: #ecc30b; 
-    transition: 0.4s;
-    border-radius: 50%;
-}
-
-
-.slider .icon {
-    position: absolute;
-    top: 50%;
-    left: 6px;
-    transform: translateY(-50%);
-    font-size: 15px;
-    /* color: #fdfdfd; */
-    transition: transform 0.4s, color 0.4s;
-}
-
-.fa-moon:before {
-    position: relative;
-    left: 1.85rem;
-
-}
-
-.fa-moon {
-    color: #8f8b8b;
-}
-
-
-
-
-.fa-sun:before {
-    color: #8f8b8b;
-}
-
-input:checked + .slider:before {
-    transform: translateX(26px);
-    background-color: #5a75f5;
-    right: 47%;
-}
-
-/* input:checked + .slider .icon {
-transform: translate(27px, -8px);
-} */
-
-
-input:checked + .slider {
-    background-color: #3d3d3d;
-}
-
-
-/* input:checked + .slider .icon {
-    color: #555555; 
-} */
-
+body{padding:0;font-family:Roboto,sans-serif;direction:rtl;margin:0}main{font-family:Arial,sans-serif;grid-template-columns:1fr;justify-items:center;align-items:center;gap:10px;padding:10px 5px 5px}header,main{display:grid}header{background-color:#519985;padding:10px;height:5%}.login-container{background-color:rgba(255,255,255,.933);padding:18px;box-shadow:rgba(0,0,0,.2) 0 3px 3px -2px,rgba(0,0,0,.14) 0 3px 4px 0,rgba(0,0,0,.12) 0 1px 8px 0;border-radius:8px;width:88%;max-width:400px;text-align:center}.login-border{color:white;height:2.8rem;position:relative;right:1%;top:-1.35rem;border-radius:8px;background-color:#48907CEE}.loginFormCont{position:relative;margin-top:4%;width:100%;height:fit-content;top:0}h2{margin-bottom:20px;position:relative;top:.5rem}.input-group{margin-bottom:15px}label{display:block;margin-bottom:5px;text-align:right;font-size:17px}input{width:100%;padding:10px;border:1px solid #ddd;border-radius:4px;box-sizing:border-box;transition:border-color .3s}input:focus{outline:1.8px solid #3a7564ee}.Subtn{width:45%;padding:9px;background-color:#3a7564ee;border:none;color:white;border-radius:4px;cursor:pointer;font-weight:bold}.Subtn:hover{background-color:#4c9782ee}.info-container{margin-top:25px;width:94%;max-width:400px;min-width:30%;background-color:#fff;padding:15px 9px 15px 9px;box-shadow:rgba(0,0,0,.2) 0 3px 3px -2px,rgba(0,0,0,.14) 0 3px 4px 0,rgba(0,0,0,.12) 0 1px 8px 0;border-radius:8px}.info-header{color:white;height:2.8rem;text-align:center;position:relative;top:-1.35rem;border-radius:8px;background-color:#48907CEE}.info-border{direction:rtl;display:grid;grid-template-columns:5px 1fr 1fr;grid-template-rows:repeat(4,1fr);border-radius:4px;overflow:hidden;width:100%;max-width:400px;margin-bottom:10px}.info-border::before{content:'';background-color:#0f766e;grid-row:1/span 4;grid-column:1/2}.info-table{width:100%;border-radius:4px;border-collapse:collapse;overflow:hidden;box-shadow:rgba(0,0,0,.2) 0 2px 1px -1px,rgba(0,0,0,.14) 0 1px 1px 0,rgba(0,0,0,.12) 0 1px 3px 0}.info-table-border{border-radius:4px;border:1px solid #3a7564ee}.info-table-body tr{border-bottom:1px solid #ddd}.info-table-body tr:last-child{border-bottom:none}.info-table td{padding:10px;text-align:left}.info-table td:first-child{text-align:justify;width:46%;color:#519985;background-color:#dbdbdb}.info-table td:last-child{font-weight:bold;color:#2d2c2cc7;background-color:#fff;text-align:justify}.info-table tr:hover td:last-child{background-color:#f9f9f9}.info-container{display:none}.checkRend{right:.5%;top:.5rem;height:1.8rem;position:relative;background-color:rgb(34 179 65);width:30%;padding:9px;border:none;color:white;border-radius:4px;cursor:pointer;font-weight:bold}.checkRend:hover{background-color:rgb(26,141,51)}.checkRend:hover::after{background-color:rgb(165,33,33)}.HideInfo{right:2.5%;top:.5rem;height:1.8rem;position:relative;background-color:#0c38b5de;width:32%;padding:9px;border:none;color:white;border-radius:4px;cursor:pointer;font-weight:bold}.HideInfo:hover{background-color:#0f46ddde}.logout{right:3.5%;top:.5rem;height:1.8rem;position:relative;background-color:rgb(205 42 42);width:30%;padding:9px;border:none;color:white;border-radius:4px;cursor:pointer;font-weight:bold}.logout:hover{background-color:rgb(238,49,49)}#notify-login{display:none;height:fit-content;min-height:2rem;border-radius:6px;background-color:#e74545;text-align:center;margin-bottom:5%}#message-login{font-weight:bold;padding-top:2%;color:rgb(255,255,255)}#notify-info{display:none;position:relative;width:85%;right:8%;top:-.2rem;min-height:2rem;border-radius:6px;background-color:#e71919;text-align:center}#message-info{padding-top:1%;color:rgb(255,255,255)}#notify-info-info{display:none;position:relative;width:85%;right:8%;top:-.6rem;border-radius:4px;background-color:#0c38b5de;text-align:center}#message-info-info{padding-top:2%;color:rgb(255,255,255)}#notify-checked{display:none;position:relative;width:fit-content;min-width:57%;max-width:58%;right:21%;top:-.5rem;padding:1%;border-radius:6px;background-color:#57a791;text-align:center}#message-checked{color:rgb(255 255 255);margin-block-start:0;margin-block-end:0}.media{margin-top:2%;border-radius:4px;background-color:#ffffff;width:100%;border:1.5px solid}audio{width:100%;height:24px;border-radius:0}.container-dark{background-color:#292929;border:1.5px solid #48907CEE}body.dark-mode{background-color:#121212;color:white}.switch{position:relative;display:inline-block;width:3.5rem;height:1.6rem;right:7%}.switch input{opacity:0;width:0;height:0}.slider{position:absolute;cursor:pointer;top:0;left:0;right:0;width:100%;height:100%;overflow:hidden;bottom:0;background-color:#edeaea;transition:.4s;border-radius:24px}.slider:before{position:absolute;content:"";height:100%;width:47%;right:51%;bottom:1%;background-color:#ecc30b;transition:.4s;border-radius:50%}.slider .icon{position:absolute;top:50%;left:6px;transform:translateY(-50%);font-size:15px;transition:transform .4s,color .4s}.fa-moon:before{position:relative;left:1.85rem}.fa-moon{color:#8f8b8b}.fa-sun:before{color:#8f8b8b}input:checked + .slider:before{transform:translateX(26px);background-color:#5a75f5;right:47%}input:checked + .slider{background-color:#3d3d3d}
